Bug 1722886 - Add a way to override prefers-color-scheme for content without messing with widget values. r=stransky

Differential Revision: https://phabricator.services.mozilla.com/D122455